dataset1235/2025-2/2318198438/users/3921522300/executions/2445341515_680711497.log
== RUN (2025-09-02 00:17:55)
-- CODE: 
from math import *

lado = float(input())

apot = 2 * tan(pi/12)

area = 6 * lado * apot

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
---- user output:
22.51
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
---- user output:
9.65
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
---- user output:
12.86
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
---- user output:
16.08
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
---- user output:
19.29
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
---- user output:
6.43
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 00:17:41)
-- CODE: 
from math import *

lado = float(input())

apot = 2 * tan(pi/12)

area = 6 * lado * apot

print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
---- user output:
22.51
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
---- user output:
9.65
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
---- user output:
12.86
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
---- user output:
16.08
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
---- user output:
19.29
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
---- user output:
6.43
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 00:23:48)
-- CODE: 
from math import *

lado = float(input())

apot = lado / (2 * tan(pi/12))

area = 6 * lado * apot

print(round(area,2))
print(pi)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
---- user output:
3.141592653589793
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
---- user output:
3.141592653589793
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
---- user output:
3.141592653589793
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
---- user output:
3.141592653589793
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
---- user output:
3.141592653589793
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
---- user output:
3.141592653589793
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:21:50)
-- CODE: 
from math import *

lado = float(input())

apot = 2 * tan(pi/12)

area = 6 * lado * apot

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
---- user output:
22.51
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
---- user output:
9.65
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
---- user output:
12.86
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
---- user output:
16.08
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
---- user output:
19.29
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
---- user output:
6.43
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 00:23:57)
-- CODE: 
from math import *

lado = float(input())

apot = lado / (2 * tan(pi/12))

area = 6 * lado * apot

print(round(area,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
---- user output:
548.61
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
---- user output:
100.77
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
---- user output:
179.14
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
---- user output:
279.9
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
---- user output:
403.06
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
---- user output:
44.78
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 00:21:48)
-- CODE: 
from math import *

lado = float(input())

apot = 2 * tan(pi/12)

area = 6 * lado * apot

print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
---- user output:
22.51
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
---- user output:
9.65
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
---- user output:
12.86
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
---- user output:
16.08
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
---- user output:
19.29
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
---- user output:
6.43
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:22:57)
-- CODE: 
from math import *

lado = float(input())

apot = 2 * tan(pi/12)

area = 6 * lado * apot

print(round(area,2))
print(pi)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
---- user output:
3.141592653589793
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
---- user output:
3.141592653589793
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
---- user output:
3.141592653589793
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
---- user output:
3.141592653589793
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
---- user output:
3.141592653589793
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
---- user output:
3.141592653589793
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:17:17)
-- CODE: 
from math import *

lado = float(input())

apot = 2 * math.tan(math.pi/12)

area = 6 * lado * apot

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = 2 * math.tan(math.pi/12)
               ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = 2 * math.tan(math.pi/12)
               ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = 2 * math.tan(math.pi/12)
               ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = 2 * math.tan(math.pi/12)
               ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = 2 * math.tan(math.pi/12)
               ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = 2 * math.tan(math.pi/12)
               ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 00:17:15)
-- CODE: 
from math import *

lado = float(input())

apot = 2 * math.tan(math.pi/12)

area = 6 * lado * apot

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = 2 * math.tan(math.pi/12)
               ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = 2 * math.tan(math.pi/12)
               ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = 2 * math.tan(math.pi/12)
               ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = 2 * math.tan(math.pi/12)
               ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = 2 * math.tan(math.pi/12)
               ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = 2 * math.tan(math.pi/12)
               ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:18:20)
-- CODE: 
from math import *

lado = float(input())

apot = 2 * math.tan(math.pi/12)

area = 6 * lado * apot

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = 2 * math.tan(math.pi/12)
               ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = 2 * math.tan(math.pi/12)
               ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = 2 * math.tan(math.pi/12)
               ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = 2 * math.tan(math.pi/12)
               ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = 2 * math.tan(math.pi/12)
               ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = 2 * math.tan(math.pi/12)
               ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 00:18:18)
-- CODE: 
from math import *

lado = float(input())

apot = 2 * math.tan(math.pi/12)

area = 6 * lado * apot

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = 2 * math.tan(math.pi/12)
               ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = 2 * math.tan(math.pi/12)
               ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = 2 * math.tan(math.pi/12)
               ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = 2 * math.tan(math.pi/12)
               ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = 2 * math.tan(math.pi/12)
               ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apot = 2 * math.tan(math.pi/12)
               ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:23:43)
-- CODE: 
from math import *

lado = float(input())

apot = lado / (2 * tan(pi/12))

area = 6 * lado * apot

print(round(area,2))
print(pi)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
---- user output:
3.141592653589793
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
---- user output:
3.141592653589793
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
---- user output:
3.141592653589793
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
---- user output:
3.141592653589793
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
---- user output:
3.141592653589793
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
---- user output:
3.141592653589793
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:23:08)
-- CODE: 
from math import *

lado = float(input())

apot = 2 * (tan(pi/12))

area = 6 * lado * apot

print(round(area,2))
print(pi)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
---- user output:
3.141592653589793
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
---- user output:
3.141592653589793
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
---- user output:
3.141592653589793
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
---- user output:
3.141592653589793
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
---- user output:
3.141592653589793
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
---- user output:
3.141592653589793
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:18:02)
-- CODE: 
from math import *

lado = float(input())

apot = 2 * tan(pi/12)

area = 6 * lado * apot

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
---- user output:
22.51
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
---- user output:
9.65
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
---- user output:
12.86
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
---- user output:
16.08
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
---- user output:
19.29
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
---- user output:
6.43
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
